--- a/Dockerfile.uv
+++ b/Dockerfile.uv
@@ -15,12 +15,14 @@ RUN apt-get update && apt-get install -y \
 RUN curl -fsSL https://deb.nodesource.com/setup_18.x | bash - && \
     apt-get install -y nodejs
 
-# Copy requirements file
-COPY requirements.txt ./
+# Install uv
+RUN pip install --no-cache-dir uv
 
-# Install Python dependencies
-RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+# Copy pyproject.toml for uv to use
+COPY pyproject.toml ./
+
+# Install Python dependencies using uv
+RUN uv pip install --system --no-cache -e .
 
 # Copy application code
 COPY . .
