--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ langchain-openai==0.0.5
 langfuse==1.0.18
 pinecone-client==3.2.2
 pypdf==3.15.4
+psycopg2-binary==2.9.11
 python-dotenv>=1.1.1
 redis==5.0.0
 tiktoken>=0.5.2
